--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-      <img class="logo" src="" alt="Логотип интернет магазина Device">
+      <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
 
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="search" type="search" name="search">
@@ -43,7 +43,7 @@
 
     <main class="main-index">
       <section>
-        <img src="" alt="Квадракоптер с мощным лазером">
+        <img src="images/main-image.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
         <h1>Порхает как бабочка, жалит как пчела!</h1>
         <p>
           Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
@@ -66,43 +66,37 @@
         <ul class="category-list">
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="" alt="Очки виртуальной реальности">
+              <img class="category-card-image" src="images/VR.svg" width="160" height="160" alt="Очки виртуальной реальности">
               <p>Виртуальная реальность</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="" alt="Монопод для селфи">
+              <img class="category-card-image" src="images/monopods.svg" width="160" height="160" alt="Монопод для селфи">
               <p>Моноподы для селфи</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="" alt="Экшн-камера">
+              <img class="category-card-image" src="images/action-camera.svg" width="160" height="160" alt="Экшн-камера">
               <p>Экшн-камеры</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="" alt="Фитнес-браслет">
+              <img class="category-card-image" src="images/fitness-bracelets.svg" width="160" height="160" alt="Фитнес-браслет">
               <p>Фитнес-браслеты</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="" alt="Фитнес-браслет">
-              <p>Фитнес-браслеты</p>
-            </a>
-          </li>
-          <li class="category-card">
-            <a href="#">
-              <img class="category-card-image" src="" alt="Умные часы">
+              <img class="category-card-image" src="images/smart-watch.svg" width="160" height="160" alt="Умные часы">
               <p>Умные часы</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="" alt="Квадрокоптер">
+              <img class="category-card-image" src="images/quadrocopters.svg" width="160" height="160" alt="Квадрокоптер">
               <p>Квадрокоптеры</p>
             </a>
           </li>
@@ -114,6 +108,7 @@
         <button class="button" type="button">Доставка</button>
         <button class="button" type="button">Гарантия</button>
         <button class="button" type="button">Кредит</button>
+        <img class="advantage-image" src="images/delivery.svg" width="136" height="164" alt="Доставщик">
         <div class="services-item">
           <h3 class="section-title">Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо
@@ -170,7 +165,7 @@
 
     <footer>
       <div>
-       <img class="logo" src="" alt="Логотип интернет магазина «Device»">
+       <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
        <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
       </div>
 
@@ -192,23 +187,26 @@
         <li class="footer-social-item">
           <a class="button" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Telegram</span>
+            <img src="images/telegram.svg">
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
+            <img src="images/you-tube.svg">
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://twitter.com/htmlacademy_ru">
             <span class="visually-hidden">Twitter</span>
+            <img src="images/twitter.svg">
           </a>
         </li>
       </ul>
 
       <div>
         <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img class="autograph" src="" alt="Автор HTML-Academy"></a>
+        <a href="https://htmlacademy.ru/"><img class="autograph" src="images/html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
       </div>
 
     </footer>
