--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-    <a href="index.html"><img class="logo" src="" alt="Логотип интернет магазина Device"></a>
+    <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
 
     <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
       <input class="search" type="search" name="search">
@@ -21,13 +21,16 @@
           <a class="navigation-user-link" href="#">Выйти</a>
         </li>
         <li class="navigation-user-item">
+          <img class="icons" src="images/compare.svg" width="10px" height="12px">
           <a class="navigation-user-link" href="#">Сравнить</a>
         </li>
         <li class="navigation-user-item">
+          <img class="icons" src="images/basket.svg" width="16px" height="14px">
           <a class="navigation-user-link" href="#">Корзина</a>
         </li>
         <li class="navigation-user-item">
           <a class="navigation-user-link" href="#">Каталог товаров</a>
+          <img class="plus" src="images/plus.svg" width="50px" height="50px">
         </li>
         <li class="navigation-user-item">
           <a class="navigation-user-link" href="#">Доставка</a>
@@ -137,7 +140,7 @@
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="Cелфи-палка">
+              <img class="product-card-image" src="images/amateur-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Любительская селфи-палка</h3>
               <p class="product-card-price">500 ₽</p>
             </a>
@@ -145,7 +148,7 @@
 
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="Cелфи-палка">
+              <img class="product-card-image" src="images/professional-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Профессиональная селфи-палка</h3>
               <p class="product-card-price">1 500 ₽</p>
             </a>
@@ -153,7 +156,7 @@
 
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="Cелфи-палка">
+              <img class="product-card-image" src="images/unsinkable-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
               <p class="product-card-price">2 500 ₽</p>
             </a>
@@ -161,7 +164,7 @@
 
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="Cелфи-палка">
+              <img class="product-card-image" src="images/selfie-stick-follow-me.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
               <p class="product-card-price">1 500 ₽</p>
             </a>
@@ -197,7 +200,7 @@
 
   <footer>
     <div>
-     <img class="logo" src="" alt="Логотип интернет магазина «Device»">
+     <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
      <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
     </div>
 
@@ -219,23 +222,26 @@
       <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy">
           <span class="visually-hidden">Telegram</span>
+          <img src="images/telegram.svg">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">YouTube</span>
+          <img src="images/you-tube.svg">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://twitter.com/htmlacademy_ru">
           <span class="visually-hidden">Twitter</span>
+          <img src="images/twitter.svg">
         </a>
       </li>
     </ul>
 
     <div>
       <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/"><img class="autograph" src="" alt="Автор HTML-Academy"></a>
+      <a href="https://htmlacademy.ru/"><img class="autograph" src="images/html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
     </div>
 
   </footer>
