--- a/catalog.html
+++ b/catalog.html
@@ -7,30 +7,34 @@
 <body>
   <header class="page-header">
     <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-    <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+    <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
 
     <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
       <input class="search" type="search" name="search">
+      <img class="icons" src="images/icons-loupe.svg" width="16px" height="16px">
       <button class="button find-button" type="submit">Найти</button>
     </form>
 
     <nav class="navigation-user">
       <ul class="navigation-user-list">
-        <!-- личный кабинет -->
         <li class="navigation-user-item">
-          <a class="navigation-user-link" href="#">Выйти</a>
+          <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
+          <a class="navigation-user-link" href="#">Коля Петухов</a>
         </li>
         <li class="navigation-user-item">
-          <img class="icons" src="images/compare.svg" width="10px" height="12px">
+          <a class="navigation-user-link" href="#">Войти</a>
+        </li>
+        <li class="navigation-user-item">
+          <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
           <a class="navigation-user-link" href="#">Сравнить</a>
         </li>
         <li class="navigation-user-item">
-          <img class="icons" src="images/basket.svg" width="16px" height="14px">
+          <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
           <a class="navigation-user-link" href="#">Корзина</a>
         </li>
         <li class="navigation-user-item">
           <a class="navigation-user-link" href="#">Каталог товаров</a>
-          <img class="plus" src="images/plus.svg" width="50px" height="50px">
+          <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
         </li>
         <li class="navigation-user-item">
           <a class="navigation-user-link" href="#">Доставка</a>
@@ -52,9 +56,11 @@
         <li class="breadcrumbs-item">
           <a href="index.html" class="breadcrumbs-link">Главная</a>
         </li>
+        <img class= "icons-arrow" src="images/icons-switch.svg" width="4px" height="7px">
         <li class="breadcrumbs-item">
           <a href="#" class="breadcrumbs-link">Каталог товаров</a>
         </li>
+        <img class= "icons-arrow" src="images/icons-switch.svg" width="4px" height="7px">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link">Моноподы для селфи</a>
         </li>
@@ -131,16 +137,19 @@
       </form>
 
         <h3 class="filter-title">Сортировка</h3>
+        <img class= "icons" src="images/icons-sort-up.svg" width="11px" height="10px">
+        <!-- sort-down -->
         <select class="select-control" aria-label="Сортировка">
           <option value="popular">Популярные</option>
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
+          <img class= "icons" src="images/icons-switch.svg" width="4px" height="7px">
         </select>
 
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="images/amateur-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
+              <img class="product-card-image" src="images/product-amateur-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Любительская селфи-палка</h3>
               <p class="product-card-price">500 ₽</p>
             </a>
@@ -148,7 +157,7 @@
 
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="images/professional-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
+              <img class="product-card-image" src="images/product-professional-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Профессиональная селфи-палка</h3>
               <p class="product-card-price">1 500 ₽</p>
             </a>
@@ -156,7 +165,7 @@
 
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="images/unsinkable-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
+              <img class="product-card-image" src="images/product-unsinkable-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
               <p class="product-card-price">2 500 ₽</p>
             </a>
@@ -164,13 +173,13 @@
 
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="images/selfie-stick-follow-me.jpg" alt="Cелфи-палка" width="360px" height="380px">
+              <img class="product-card-image" src="images/product-selfie-stick-follow-me.jpg" alt="Cелфи-палка" width="360px" height="380px">
               <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
               <p class="product-card-price">1 500 ₽</p>
             </a>
           </li>
         </ul>
-        <button class="button pagination-show-more" type="submit">Загрузить ещё</button>
+        <a class="button pagination-show-more" type="submit">Загрузить ещё</a>
 
         <ul class="pagination">
           <li class="pagination-item">
@@ -185,9 +194,9 @@
           <li class="pagination-item">
             <a class="pagination-link" href="#">3</a>
           </li>
-          <!-- <li class="pagination-item">
+          <li class="pagination-item">
             <a class="pagination-link" href="#">...</a>
-          </li> -->
+          </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">15</a>
           </li>
@@ -200,7 +209,7 @@
 
   <footer>
     <div>
-     <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+     <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
      <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
     </div>
 
@@ -222,26 +231,26 @@
       <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy">
           <span class="visually-hidden">Telegram</span>
-          <img src="images/telegram.svg">
+          <img src="images/social-networks-telegram.svg" width="14px" height="12px">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">YouTube</span>
-          <img src="images/you-tube.svg">
+          <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://twitter.com/htmlacademy_ru">
           <span class="visually-hidden">Twitter</span>
-          <img src="images/twitter.svg">
+          <img src="images/social-networks-twitter.svg" width="15px" height="14px">
         </a>
       </li>
     </ul>
 
     <div>
       <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/"><img class="autograph" src="images/html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
+      <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
     </div>
 
   </footer>
