--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
       <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-      <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+      <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
 
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="search" type="search" name="search">
+        <img class="icons" src="images/icons-loupe.svg" width="16px" height="16px">
         <button class="button find-button" type="submit">Найти</button>
       </form>
 
       <nav class="navigation-user">
         <ul class="navigation-user-list">
           <li class="navigation-user-item">
+            <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
             <a class="navigation-user-link" href="#">Войти</a>
           </li>
           <li class="navigation-user-item">
+            <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
             <a class="navigation-user-link" href="#">Сравнить</a>
           </li>
           <li class="navigation-user-item">
+            <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
             <a class="navigation-user-link" href="#">Корзина</a>
           </li>
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">Каталог товаров</a>
+            <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
           </li>
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">Доставка</a>
@@ -43,8 +49,11 @@
 
     <main class="main-index">
       <section>
-        <img src="images/main-image.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
-        <h1>Порхает как бабочка, жалит как пчела!</h1>
+        <span>01</span>
+        <img class="icons" src="images/icons-arrow-left.svg" width="20px" height="60px">
+        <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
+        <img class="icons" src="images/icons-arrow-right.svg" width="20px" height="60px">
+        <h3>Порхает как бабочка, жалит как пчела!</h3>
         <p>
           Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
         </p>
@@ -66,37 +75,37 @@
         <ul class="category-list">
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="images/VR.svg" width="160" height="160" alt="Очки виртуальной реальности">
+              <img class="category-card-image" src="images/category-vr.png" width="160" height="160" alt="Очки виртуальной реальности">
               <p>Виртуальная реальность</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="images/monopods.svg" width="160" height="160" alt="Монопод для селфи">
+              <img class="category-card-image" src="images/category-monopods-for-selfie.png" width="160" height="160" alt="Монопод для селфи">
               <p>Моноподы для селфи</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="images/action-camera.svg" width="160" height="160" alt="Экшн-камера">
+              <img class="category-card-image" src="images/category-action-cameras.png" width="160" height="160" alt="Экшн-камера">
               <p>Экшн-камеры</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="images/fitness-bracelets.svg" width="160" height="160" alt="Фитнес-браслет">
+              <img class="category-card-image" src="images/category-fitness-bracelets.png" width="160" height="160" alt="Фитнес-браслет">
               <p>Фитнес-браслеты</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="images/smart-watch.svg" width="160" height="160" alt="Умные часы">
+              <img class="category-card-image" src="images/category-smart-watch.png" width="160" height="160" alt="Умные часы">
               <p>Умные часы</p>
             </a>
           </li>
           <li class="category-card">
             <a href="#">
-              <img class="category-card-image" src="images/quadrocopters.svg" width="160" height="160" alt="Квадрокоптер">
+              <img class="category-card-image" src="images/category-quadrocopter.png" width="160" height="160" alt="Квадрокоптер">
               <p>Квадрокоптеры</p>
             </a>
           </li>
@@ -108,7 +117,7 @@
         <button class="button" type="button">Доставка</button>
         <button class="button" type="button">Гарантия</button>
         <button class="button" type="button">Кредит</button>
-        <img class="advantage-image" src="images/delivery.svg" width="136" height="164" alt="Доставщик">
+        <img class="advantage-image" src="images/advantage-delivery.svg" width="136" height="164" alt="Доставщик">
         <div class="services-item">
           <h3 class="section-title">Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо
@@ -120,7 +129,8 @@
       <!-- Рассмотрим эту секцию позже -->
       <section>
         <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
-        <button><img src="">Доставим редкий товар под заказ</button>
+        <button><img src="images/icons-car.svg" width="47px" height="31px">Доставим редкий товар под заказ</button>
+        <img class="icons" src="images/icons-notice.svg" width="2px" height="12px">
       </section>
 
       <section>
@@ -159,13 +169,14 @@
           <input type="text" name="email" placeholder="Ваш e-mail">
           <input type="submit" value="Подписаться">
         </form>
+        <img class="icons" src="images/icons-tick-green.svg" width="16px" height="16px">
         <p>Это бесплатно</p>
       </section>
     </main>
 
     <footer>
       <div>
-       <img class="logo" src="images/logo.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+       <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
        <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
       </div>
 
@@ -187,26 +198,26 @@
         <li class="footer-social-item">
           <a class="button" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Telegram</span>
-            <img src="images/telegram.svg">
+            <img src="images/social-networks-telegram.svg" width="14px" height="12px">
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
-            <img src="images/you-tube.svg">
+            <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://twitter.com/htmlacademy_ru">
             <span class="visually-hidden">Twitter</span>
-            <img src="images/twitter.svg">
+            <img src="images/social-networks-twitter.svg" width="15px" height="14px">
           </a>
         </li>
       </ul>
 
       <div>
         <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img class="autograph" src="images/html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
+        <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
       </div>
 
     </footer>
