--- a/index.html
+++ b/index.html
@@ -13,43 +13,43 @@
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="search" type="search" name="search">
         <img class="icons" src="images/icons-loupe.svg" width="16px" height="16px">
-        <button class="button find-button" type="submit">Найти</button>
+        <button class="find-button" type="submit">Найти</button>
       </form>
 
-      <nav class="navigation-user">
-        <ul class="navigation-user-list">
-          <li class="navigation-user-item">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
             <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
             <a class="navigation-user-link" href="#">Войти</a>
           </li>
-          <li class="navigation-user-item">
+          <li class="navigation-item">
             <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
             <a class="navigation-user-link" href="#">Сравнить</a>
           </li>
-          <li class="navigation-user-item">
+          <li class="navigation-item">
             <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
             <a class="navigation-user-link" href="#">Корзина</a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">Каталог товаров</a>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Каталог товаров</a>
             <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">Доставка</a>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Доставка</a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">Гарантия</a>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Гарантия</a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">Контакты</a>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main class="main-index">
-      <section>
-        <span>01</span>
+      <section class="slider">
+        <span class="number">01</span>
         <img class="icons" src="images/icons-arrow-left.svg" width="20px" height="60px">
         <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
         <img class="icons" src="images/icons-arrow-right.svg" width="20px" height="60px">
@@ -57,8 +57,8 @@
         <p>
           Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
         </p>
-        <a href="#">Подробнее</a>
-        <table>
+        <a class="button" href="#">Подробнее</a>
+        <table class="specification">
           <tr>
             <th>800  м</th>
             <th>50  м</th>
@@ -74,37 +74,37 @@
         <h2 class="visually-hidden">Продукты</h2>
         <ul class="category-list">
           <li class="category-card">
-            <a href="#">
+            <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-vr.png" width="160" height="160" alt="Очки виртуальной реальности">
               <p>Виртуальная реальность</p>
             </a>
           </li>
           <li class="category-card">
-            <a href="#">
+            <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-monopods-for-selfie.png" width="160" height="160" alt="Монопод для селфи">
               <p>Моноподы для селфи</p>
             </a>
           </li>
           <li class="category-card">
-            <a href="#">
+            <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-action-cameras.png" width="160" height="160" alt="Экшн-камера">
               <p>Экшн-камеры</p>
             </a>
           </li>
           <li class="category-card">
-            <a href="#">
+            <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-fitness-bracelets.png" width="160" height="160" alt="Фитнес-браслет">
               <p>Фитнес-браслеты</p>
             </a>
           </li>
           <li class="category-card">
-            <a href="#">
+            <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-smart-watch.png" width="160" height="160" alt="Умные часы">
               <p>Умные часы</p>
             </a>
           </li>
           <li class="category-card">
-            <a href="#">
+            <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-quadrocopter.png" width="160" height="160" alt="Квадрокоптер">
               <p>Квадрокоптеры</p>
             </a>
@@ -112,56 +112,59 @@
         </ul>
       </section>
 
-      <section>
+      <section class="advantage">
         <h2 class="visually-hidden">Преимущества</h2>
-        <button class="button" type="button">Доставка</button>
-        <button class="button" type="button">Гарантия</button>
-        <button class="button" type="button">Кредит</button>
-        <img class="advantage-image" src="images/advantage-delivery.svg" width="136" height="164" alt="Доставщик">
-        <div class="services-item">
-          <h3 class="section-title">Доставка</h3>
+        <button class="advantage-button active" type="button">Доставка</button>
+        <button class="advantage-button" type="button">Гарантия</button>
+        <button class="advantage-button" type="button">Кредит</button>
+        <div class="advantage-item">
+          <h3>Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо
             к вашему подъезду совершенно бесплатно! Ведь
             мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            <img class="advantage-image" src="images/advantage-delivery.svg" width="136" height="164" alt="Доставщик">
         </div>
       </section>
 
       <!-- Рассмотрим эту секцию позже -->
       <section>
         <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
-        <button><img src="images/icons-car.svg" width="47px" height="31px">Доставим редкий товар под заказ</button>
-        <img class="icons" src="images/icons-notice.svg" width="2px" height="12px">
+        <button class="delivery-button">
+          <img class="icons-car" src="images/icons-car.svg" width="47px" height="31px">
+           Доставим редкий товар под заказ
+          <img class="icons icons-notice" src="images/icons-notice.svg" width="2px" height="12px">
+        </button>
       </section>
 
-      <section>
-        <h2 class="section-title">О нас</h2>
+      <section class="section-contact">
+        <h2>О нас</h2>
         <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-        <ul>
-          <li>Меловые линии</li>
-          <li>СДИК</li>
-          <li>ТоксБерри</li>
+        <ul class="delivery-item">
+          <li class="delivery-list"><span>Меловые линии</span></li>
+          <li class="delivery-list"><span>СДИК</span></li>
+          <li class="delivery-list"><span>ТоксБерри</span></li>
         </ul>
-        <a href="#">Подробнее о нас</a>
+        <a class="button" href="#">Подробнее о нас</a>
       </section>
 
-      <section>
-        <h2 class="section-title">Контакты</h2>
+      <section class="section-contact">
+        <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис.
           Заодно сможете проверить работоспособность покупки. </p>
         <h3>Интернет-магазин «Девайс»</h3>
           <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
           <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-        <h3 class="contacts-subtitle">Время работы</h3>
+        <h3>Время работы</h3>
         <ul class="contacts-schedule">
           <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
         </ul>
-        <a href="#">Напишите нам</a>
+        <a class="button" href="#">Напишите нам</a>
       </section>
 
-      <section>
-        <h2 class="section-title">Подпишитесь на рассылку</h2>
+      <section class="section-distribution">
+        <h2>Подпишитесь на рассылку</h2>
         <p>Еженедельный дайджест с обзорами новинок,
           длительными тест-драйвами, распаковками,
           а также акции, спецпредложения и вот это вот всё. </p>
@@ -174,10 +177,10 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="page-footer">
       <div>
-       <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
-       <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
+       <img class="logo logo-footer" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+       <address class="contacts-address-text contacts-address-text-footer">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
       </div>
 
       <div>
@@ -196,19 +199,19 @@
 
       <ul class="footer-social-list">
         <li class="footer-social-item">
-          <a class="button" href="https://t.me/htmlacademy">
+          <a class="social-button" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Telegram</span>
             <img src="images/social-networks-telegram.svg" width="14px" height="12px">
           </a>
         </li>
         <li class="footer-social-item">
-          <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+          <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
             <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
           </a>
         </li>
         <li class="footer-social-item">
-          <a class="button" href="https://twitter.com/htmlacademy_ru">
+          <a class="social-button" href="https://twitter.com/htmlacademy_ru">
             <span class="visually-hidden">Twitter</span>
             <img src="images/social-networks-twitter.svg" width="15px" height="14px">
           </a>
