Внесены правки по стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
     <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
       <input class="search" type="search" name="search">
       <img class="icons" src="images/icons-loupe.svg" width="16px" height="16px">
-      <button class="button find-button" type="submit">Найти</button>
+      <button class="find-button" type="submit">Найти</button>
     </form>
 
     <nav class="navigation">
@@ -52,7 +52,7 @@
 
   <main class="main-inner">
     <header class="inner-header">
-      <h1 class="inner-header-title">Моноподы для селфи</h1>
+      <h1 class="main-title">Моноподы для селфи</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a href="index.html">Главная</a>
@@ -134,7 +134,7 @@
              </li>
            </ul>
         </fieldset>
-        <button class="button" type="submit">Показать</button>
+        <button class="main-button button" type="submit">Показать</button>
       </form>
 
         <h3 class="filter-title">Сортировка</h3>
@@ -153,41 +153,41 @@
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/product-amateur-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
                 <h3 class="product-card-title">Любительская селфи-палка</h3>
-                <p class="product-card-price">500 ₽</p>
               </a>
+              <p class="product-card-price">500 ₽</p>
             </li>
 
             <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/product-professional-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
                 <h3 class="product-card-title">Профессиональная селфи-палка</h3>
-                <p class="product-card-price">1 500 ₽</p>
               </a>
+              <p class="product-card-price">1 500 ₽</p>
             </li>
 
             <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/product-unsinkable-selfie-stick.jpg" alt="Cелфи-палка" width="360px" height="380px">
                 <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
-                <p class="product-card-price">2 500 ₽</p>
               </a>
+              <p class="product-card-price">2 500 ₽</p>
             </li>
 
             <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="images/product-selfie-stick-follow-me.jpg" alt="Cелфи-палка" width="360px" height="380px">
                 <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
-                <p class="product-card-price">1 500 ₽</p>
               </a>
+              <p class="product-card-price">1 500 ₽</p>
             </li>
           </ul>
         </div>
 
-        <a class="button pagination-show-more" type="submit">Загрузить ещё</a>
+        <button class="pagination-show-more" type="submit">Загрузить ещё</button>
 
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link pagination-back"> Назад </a>
+            <a class="pagination-back"> Назад </a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link pagination-current">1</a>
@@ -205,7 +205,7 @@
             <a class="pagination-link" href="#">15</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link pagination-next" href="#"> Вперед </a>
+            <a class="pagination-next" href="#"> Вперёд </a>
           </li>
        </ul>
     </section>
@@ -213,39 +213,39 @@
 
   <footer class="page-footer">
     <div>
-     <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+     <img class="logo logo-footer" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
      <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
     </div>
 
     <div>
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Доставка</a>
+          <a class="navigation-link text-footer" href="#">Доставка</a>
         </li>
        <li class="navigation-item">
-         <a class="navigation-link" href="#">Гарантия</a>
+         <a class="navigation-link text-footer" href="#">Гарантия</a>
        </li>
        <li class="navigation-item">
-        <a class="navigation-link" href="#">Контакты</a>
+        <a class="navigation-link text-footer" href="#">Контакты</a>
        </li>
       </ul>
     </div>
 
     <ul class="footer-social-list">
       <li class="footer-social-item">
-        <a class="button" href="https://t.me/htmlacademy">
+        <a class="social-button" href="https://t.me/htmlacademy">
           <span class="visually-hidden">Telegram</span>
           <img src="images/social-networks-telegram.svg" width="14px" height="12px">
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+        <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">YouTube</span>
           <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button" href="https://twitter.com/htmlacademy_ru">
+        <a class="social-button" href="https://twitter.com/htmlacademy_ru">
           <span class="visually-hidden">Twitter</span>
           <img src="images/social-networks-twitter.svg" width="15px" height="14px">
         </a>
@@ -253,10 +253,9 @@
     </ul>
 
     <div>
-      <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+      <a class="contacts-phone text-footer" href="tel:88128121212">+7 (812) 812-12-12</a>
       <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
     </div>
-
   </footer>
 
 </body>
