--- a/4/index.html
+++ b/4/index.html
@@ -32,7 +32,7 @@
             <a class="navigation-user-link" href="#">Корзина</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Каталог товаров</a>
+            <a class="navigation-link" href="catalog.html">Каталог товаров</a>
             <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
           </li>
           <li class="navigation-item">
@@ -51,14 +51,14 @@
     <main class="main-index">
       <section class="slider">
         <span class="number">01</span>
-        <img class="icons" src="images/icons-arrow-left.svg" width="20px" height="60px">
+        <img class="???" src="images/icons-arrow-left.svg" width="20px" height="60px">
         <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
-        <img class="icons" src="images/icons-arrow-right.svg" width="20px" height="60px">
-        <h3>Порхает как бабочка, жалит как пчела!</h3>
-        <p>
+        <img class="???" src="images/icons-arrow-right.svg" width="20px" height="60px">
+        <h2 class="main-title">Порхает как бабочка, жалит как пчела!</h2>
+        <p class="text">
           Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
         </p>
-        <a class="button" href="#">Подробнее</a>
+        <a class="main-button" href="#">Подробнее</a>
         <table class="specification">
           <tr>
             <th>800  м</th>
@@ -119,8 +119,8 @@
         <button class="advantage-button" type="button">Гарантия</button>
         <button class="advantage-button" type="button">Кредит</button>
         <div class="advantage-item">
-          <h3>Доставка</h3>
-          <p>Мы с удовольствием доставим ваш товар прямо
+          <h3 class="main-title">Доставка</h3>
+          <p class="text">Мы с удовольствием доставим ваш товар прямо
             к вашему подъезду совершенно бесплатно! Ведь
             мы неплохо заработаем, поднимая его на ваш этаж.</p>
             <img class="advantage-image" src="images/advantage-delivery.svg" width="136" height="164" alt="Доставщик">
@@ -138,35 +138,35 @@
       </section>
 
       <section class="section-contact">
-        <h2>О нас</h2>
-        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-        <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+        <h2 class="main-title">О нас</h2>
+        <p class="text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p class="text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
         <ul class="delivery-item">
           <li class="delivery-list"><span>Меловые линии</span></li>
           <li class="delivery-list"><span>СДИК</span></li>
           <li class="delivery-list"><span>ТоксБерри</span></li>
         </ul>
-        <a class="button" href="#">Подробнее о нас</a>
+        <a class="main-button" href="#">Подробнее о нас</a>
       </section>
 
       <section class="section-contact">
-        <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис.
+        <h2 class="main-title">Контакты</h2>
+        <p class="text">Вы можете забрать товар сами, заехав в наш офис.
           Заодно сможете проверить работоспособность покупки. </p>
-        <h3>Интернет-магазин «Девайс»</h3>
+        <h3 class="subtitle">Интернет-магазин «Девайс»</h3>
           <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
           <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-        <h3>Время работы</h3>
+        <h3 class="subtitle">Время работы</h3>
         <ul class="contacts-schedule">
           <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
         </ul>
-        <a class="button" href="#">Напишите нам</a>
+        <a class="main-button" href="#">Напишите нам</a>
       </section>
 
       <section class="section-distribution">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Еженедельный дайджест с обзорами новинок,
+        <h2 class="main-title">Подпишитесь на рассылку</h2>
+        <p class="text">Еженедельный дайджест с обзорами новинок,
           длительными тест-драйвами, распаковками,
           а также акции, спецпредложения и вот это вот всё. </p>
         <form action="e-mail" method="post">
@@ -174,26 +174,26 @@
           <input type="submit" value="Подписаться">
         </form>
         <img class="icons" src="images/icons-tick-green.svg" width="16px" height="16px">
-        <p>Это бесплатно</p>
+        <p class="text">Это бесплатно</p>
       </section>
     </main>
 
     <footer class="page-footer">
       <div>
        <img class="logo logo-footer" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
-       <address class="contacts-address-text contacts-address-text-footer">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
+       <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
       </div>
 
       <div>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Доставка</a>
+            <a class="navigation-link text-footer" href="#">Доставка</a>
           </li>
          <li class="navigation-item">
-           <a class="navigation-link" href="#">Гарантия</a>
+           <a class="navigation-link text-footer" href="#">Гарантия</a>
          </li>
          <li class="navigation-item">
-          <a class="navigation-link" href="#">Контакты</a>
+          <a class="navigation-link text-footer" href="#">Контакты</a>
          </li>
         </ul>
       </div>
@@ -220,10 +220,9 @@
       </ul>
 
       <div>
-        <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+        <a class="contacts-phone text-footer" href="tel:88128121212">+7 (812) 812-12-12</a>
         <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
       </div>
-
     </footer>
 
   </body>
